Fixed, refactored, ex.handler >> notification service